<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Coffee For Code</string>
    <string name="tamanho">Tamanho: </string>
    <string name="sabor">Sabor: </string>
    <string name="docedeleito">Doce de Leite</string>
    <string name="quinhentosml" translatable="false">500 ml</string>
    <string name="seissentosml" translatable="false">600 ml</string>
    <string name="under_development">Under Development</string>
    <string name="refreshers" translatable="false">Refreshers™</string>
    <string name="cafes">Coffees</string>
    <string name="unicornfrappuccino" translatable="false">Unicorn Frappuccino</string>
    <string name="mochafrappuccino" translatable="false">Mocha Frappuccino</string>
    <string name="combohappy" translatable="false">Combo Happy</string>
    <string name="refresherdemorangocomlimo" tools:ignore="TypographyEllipsis">Refresher de Morango...</string>
    <string name="desccombohapppy">Chocolate Frappuccino Croissant and Torada</string>
    <string name="salgadosesanduiches">Savory and Sandwiches</string>
    <string name="candys">Candy</string>
    <string name="dunkindonuts" translatable="false">Dunkin Donuts</string>
    <string name="sejaparceiro">Be partner</string>
    <string name="descpartner">Exclusive discounts, loyalty card, free shipping, monthly awards</string>
    <string name="masckcpf" translatable="false" tools:ignore="TypographyDashes">000.000.000-00</string>
    <string name="mascaraphone" translatable="false" tools:ignore="TypographyDashes">(00) 00000-0000</string>
    <string name="mascaraemail">example@gmail.com</string>
    <string name="exFirstName" translatable="false">Ex. Fulano</string>
    <string name="exLastName" translatable="false">Ex. Lima</string>
    <string name="carregando" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="termoscfc" tools:ignore="TypographyDashes"><u><b>Coffee For Code</b></u>\nBy accepting the terms, I agree that all my personal information informed in records with email, cpf, name, email, address and etc. are being directed to a database with encryption protocols to preserve my information and I know that this application is non-profit making, but student-oriented. \n\nApplication license: \nCopyright © 2021 Kauã Vitorio \nPermission is granted, free of charge, to anyone who obtains a copy of this software and associated documentation files (the "Software "), to deal with the Software without restriction, including, without limitation, the rights to use, copy, modify, merge, publish, distribute, sublicense and / or sell copies of the Software, and to allow the persons to whom the Software is provided to do so, subject to the following conditions:\nThe above copyright notice and this permission notice must be included in all copies or substantial parts of the Software.\nTHE SOFTWARE IS PROVIDED "AS IS" , WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGE OR OTHER LIABILITY, WHETHER IN ACTION OF CONTRACT, CRIME OR OTHERWISE ARISING OUT OF, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OF THE SOFTWARE OR NEGOTIATION OR THE USE OF THE SOFTWARE OR THE USE OF THE SOFTWARE OR THE USE OF THE SOFTWARE. NO PROGRAMS.</string>
    <string name="termosparaserparceiro"><u><b>Partner</b></u>\n\nI agree that my account will be charged a fee of R $ 20 per month for my subscription as a partner to be renewed and I agree that the CFC card is only valid for purchases on our website, application and store and is not valid for purchases on other stores.</string>
    <string name="aceitoostermos">I accept the Terms</string>
    <string name="knowmore">Know more</string>
    <string name="access">Access</string>
    <string name="txt_welcome"><u><b>Welcome!!</b></u></string>
    <string name="txtChoosetheCfc" tools:ignore="TypographyEllipsis">Choose the <u><b>CFC</b></u> \nthe coffee to start your day !!</string>
    <string name="login" translatable="false">Login</string>
    <string name="emailaddress">Email address</string>
    <string name="password">Password</string>
    <string name="forgotyhepassword"><u>Forgot your password?</u></string>
    <string name="logininto">Login into</string>
    <string name="imnewhere">I`m new here.</string>
    <string name="createaccount">Create account</string>
    <string name="wehaveaproblem">We have a problem with our server.\nTry again later</string>
    <string name="wrongemailandpassword">EMAIL OR PASSWORD informed are not correct or are not registered Check EMAIL and PASSWORD!</string>
    <string name="fill_correctly_email">Fill in correctly: EMAIL</string>
    <string name="Firstnamecreateaccount">First Name*</string>
    <string name="Lastnamecreateaccount">Last Name*</string>
    <string name="emailcreateaccount" translatable="false">Email*</string>
    <string name="createaccountbtn"><u>Create account</u></string>
    <string name="lowercase_letters" translatable="false">Lowercase Letters</string>
    <string name="uppercase_letters" translatable="false">Uppercase Letters</string>
    <string name="digits">Digits</string>
    <string name="special_characters">Special Characters</string>
    <string name="lognow">Login Now</string>
    <string name="imalredyhaveaccount">I already have an account.</string>
    <string name="cpfcreateaccount" translatable="false">CPF</string>
    <string name="accepttheterms">I accept the terms of CoffeeForCode</string>
    <string name="terms"><u>Terms</u></string>
    <string name="ApplicationErrorTryLater">Application error please try again later !!</string>
    <string name="explicacaoesteristico">* - Mandatory</string>
    <string name="createaccounterror" tools:ignore="TypographyEllipsis">It was not possible to register ...</string>
    <string name="tryagainlater">Try again later</string>
    <string name="necessary_fill_name">Necessary to fill in the field correctly: NAME</string>
    <string name="cpf_informed_is_invalid">CPF informed is invalid</string>
    <string name="required_fill_email">Required to fill in the field: EMAIL</string>
    <string name="fill_email_correctly">Fill in your email correctly</string>
    <string name="necessary_fill_correctly_password">Necessary to fill the field correctly: PASSWORD\nMinimum 8 characters</string>
    <string name="authfailed_thisemail">Authentication failed!\nThis email is already registered.</string>
    <string name="atalhos">Shortcuts</string>
    <string name="popular" translatable="false">Popular</string>
    <string name="iconemais" translatable="false">+</string>
    <string name="conferir">Check</string>
    <string name="topdasemana">Top of the week</string>
    <string name="maisvendido">Best seller</string>
    <string name="promocaodasemana">Promotion of the Week</string>
    <string name="combodasemana">Combo of the Week</string>
    <string name="indicacaodacasa">House indication</string>
    <string name="todososprodutos">All the products</string>
    <string name="carrinhodecompras">Shopping cart</string>
    <string name="cartoes">Cards</string>
    <string name="statuscartao">No to any registered card</string>
    <string name="olavirgula">Hello,</string>
    <string name="qualseupedidohj">What is your order today?</string>
    <string name="desccafes">See our huge variety of coffees available</string>
    <string name="descrefreshers">Extremely refreshing drinks of various flavors</string>
    <string name="desctodososprodutos">See all products available in our stock</string>
    <string name="txtavisosemendereco">No address found !!</string>
    <string name="cadastraragora">Sign Up Now</string>
    <string name="cadastrardepois">Register Later</string>
    <string name="descnenhumendencontrado">Precisamos de seu endereço caso você decida comprar algum pedido e a forma de retirado ser delivery sem o seu endereço não será possível lhe entregar o produto</string>
    <string name="logout">Log Out</string>
    <string name="configuracao">Settings</string>
    <string name="perfil">Profile</string>
    <string name="appinfo">App Info</string>
    <string name="vantagemdeserparceiro">Sendo parceiro você terá acesso a promoção exclusivas,\ndescontos em suas compras,\nterá um cartão CFC, frete grátis e serviço de entrega Plus</string>
    <string name="cartaocfc" translatable="false">CFC Card</string>
    <string name="visa" translatable="false">Visa</string>
    <string name="validoate">Valid until:</string>
    <string name="validadefake" translatable="false">xx/xx</string>
    <string name="proprietario">Owner</string>
    <string name="fulanodetal" translatable="false">Falano de Tal</string>
    <string name="numerocardzero" translatable="false">0000 0000 0000 0000</string>
    <string name="custo">Cost:</string>
    <string name="pricetobepartner">R $ 20 per month *</string>
    <string name="melhoroportunidade">Best Opportunity</string>
    <string name="proximo">Next</string>
    <string name="voltar">Come back</string>
    <string name="estoudeacordocomostermos">I agree with the terms</string>
    <string name="dadospessoais">Personal data</string>
    <string name="nome">Nome</string>
    <string name="cpf" translatable="false">Cpf</string>
    <string name="email" translatable="false">Email</string>
    <string name="nenhumcartaoselecionado">No Card Selected</string>
    <string name="finalcartao" translatable="false">Final: </string>
    <string name="selecionarcartao"><u> Select Card </u></string>
    <string name="selecionaroutrocartao"><u> Select Another Card </u></string>
    <string name="serparceiro">Become a Partner</string>
    <string name="bandeira">Flag</string>
    <string name="bemvindoaotimecfc">Welcome to the CFC Team</string>
    <string name="aproveiteseusbeneficios">Enjoy your benefits</string>
    <string name="seuscartoes">Your Cards</string>
    <string name="desccardcfc">For discounted purchases on our website, app and store</string>
    <string name="setinhafeita" translatable="false">-></string>
    <string name="nenhumcartaocadastrado">No Card registered !!</string>
    <string name="cadastarcartao">Register New Card</string>
    <string name="cardnumber">Card number</string>
    <string name="nomeempresonocartao">Name Printed on the card</string>
    <string name="validade">Shelf life</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="cadastar">Cadastrar</string>
    <string name="treszero" translatable="false">000</string>
    <string name="outroscartoes">Other Cards</string>
    <string name="deletarcartao">Delete Card</string>
    <string name="cadastroendereco">Address Registration</string>
    <string name="hintedtextcadastroenderecocomp" translatable="false">Ex. Ap 2 Bl 20</string>
    <string name="complement">Complement</string>
    <string name="title_editProfile">Edit profile</string>
    <string name="celular">Cell</string>
    <string name="endereco">Address</string>
    <string name="hintnome">Enter your name here</string>
    <string name="hitcpf">Enter your CPF here</string>
    <string name="hintemail">Enter your email here</string>
    <string name="hintcelular">Insert your phone here</string>
    <string name="hintendereco">Your address here</string>
    <string name="hintcomplemento">Insert your add-on here</string>
    <string name="confirm">Confirm</string>
    <string name="alter_senha"><u> Change Password </u></string>
    <string name="change_profile_image"><u>Change profile image</u></string>
    <string name="zip_code">Zip Code*</string>
    <string name="hintexZipCode" translatable="false">00000-000</string>
    <string name="hintaddressNumberHere">Address number here</string>
    <string name="addressmandatory">Address*</string>
    <string name="numbermandatory">Number*</string>
</resources>